--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <section class="main">
 
         <div class="main__card">
-            <img src="/images/unsplash_tNXHKTwnmk8.png" alt="">
+            <img src="images/unsplash_tNXHKTwnmk8.png" alt="">
 
             <div class="main__card-deco">
                 <div class="main__card-deco-left">
                     <p>МЯУ</p>
-                    <img src="/images/dec.png" alt="">
+                    <img src="images/dec.png" alt="">
                 </div>
                 <h1>Анкета котенка</h1>
             </div>
 
             <button class="main__card-button">
                 <p>Тапни!</p>
-                <img src="/images/hand.png" alt="">
+                <img src="images/hand.png" alt="">
 
             </button>
             <div class="progress-bar-container">
@@ -47,43 +47,43 @@
                 <div class="first__row">
                     <div class="gallery__row" id="1">
                         <p class="img__names">добри</p>
-                        <img src="/images/cats/image 1.png" alt="">
+                        <img src="images/cats/image 1.png" alt="">
                     </div>
                     <div class="gallery__row" id="2">
                         <p class="img__names">грустни</p>
-                        <img src="/images/cats/image 2.png" alt="">
+                        <img src="images/cats/image 2.png" alt="">
                     </div>
                     <div class="gallery__row" id="3">
                         <p class="img__names">игравси</p>
-                        <img src="/images/cats/image (1).png" alt="">
+                        <img src="images/cats/image (1).png" alt="">
                     </div>
                 </div>
                 <div class="second__row">
                     <div class="gallery__row" id="4">
                         <p class="img__names">злов</p>
-                        <img src="/images/cats/image 7.png" alt="">
+                        <img src="images/cats/image 7.png" alt="">
                     </div>
                     <div class="gallery__row" id="5">
                         <p class="img__names">чилови</p>
-                        <img src="/images/cats/image 4.png" alt="">
+                        <img src="images/cats/image 4.png" alt="">
                     </div>
                     <div class="gallery__row" id="6">
                         <p class="img__names">лубови</p>
-                        <img src="/images/cats/image 5.png" alt="">
+                        <img src="images/cats/image 5.png" alt="">
                     </div>
                 </div>
                 <div class="last__row">
                     <div class="gallery__row" id="7">
                         <p class="img__names">спасви</p>
-                        <img src="/images/cats/image 6.png" alt="">
+                        <img src="images/cats/image 6.png" alt="">
                     </div>
                     <div class="gallery__row" id="8">
                         <p class="img__names">кусавси</p>
-                        <img src="/images/cats/image (2).png" alt="">
+                        <img src="images/cats/image (2).png" alt="">
                     </div>
                     <div class="gallery__row" id="9">
                         <p class="img__names">нямням</p>
-                        <img src="/images/cats/image 3.png" alt="">
+                        <img src="images/cats/image 3.png" alt="">
                     </div>
                 </div>
             </div>
