--- a/index.html
+++ b/index.html
@@ -47,43 +47,43 @@
                 <div class="first__row">
                     <div class="gallery__row" id="1">
                         <p class="img__names">добри</p>
-                        <img src="images/cats/image 1.png" alt="">
+                        <img src="https://raw.githubusercontent.com/andreiKaq/my-website/refs/heads/main/images/cats/image%201.png" alt="">
                     </div>
                     <div class="gallery__row" id="2">
                         <p class="img__names">грустни</p>
-                        <img src="images/cats/image 2.png" alt="">
+                        <img src="https://raw.githubusercontent.com/andreiKaq/my-website/refs/heads/main/images/cats/image%202.png" alt="">
                     </div>
                     <div class="gallery__row" id="3">
                         <p class="img__names">игравси</p>
-                        <img src="images/cats/image (1).png" alt="">
+                        <img src="https://raw.githubusercontent.com/andreiKaq/my-website/refs/heads/main/images/cats/image%20(1).png" alt="">
                     </div>
                 </div>
                 <div class="second__row">
                     <div class="gallery__row" id="4">
                         <p class="img__names">злов</p>
-                        <img src="images/cats/image 7.png" alt="">
+                        <img src="https://raw.githubusercontent.com/andreiKaq/my-website/refs/heads/main/images/cats/image%207.png" alt="">
                     </div>
                     <div class="gallery__row" id="5">
                         <p class="img__names">чилови</p>
-                        <img src="images/cats/image 4.png" alt="">
+                        <img src="https://raw.githubusercontent.com/andreiKaq/my-website/refs/heads/main/images/cats/image%204.png" alt="">
                     </div>
                     <div class="gallery__row" id="6">
                         <p class="img__names">лубови</p>
-                        <img src="images/cats/image 5.png" alt="">
+                        <img src="https://raw.githubusercontent.com/andreiKaq/my-website/refs/heads/main/images/cats/image%205.png" alt="">
                     </div>
                 </div>
                 <div class="last__row">
                     <div class="gallery__row" id="7">
                         <p class="img__names">спасви</p>
-                        <img src="images/cats/image 6.png" alt="">
+                        <img src="https://raw.githubusercontent.com/andreiKaq/my-website/refs/heads/main/images/cats/image%206.png" alt="">
                     </div>
                     <div class="gallery__row" id="8">
                         <p class="img__names">кусавси</p>
-                        <img src="images/cats/image (2).png" alt="">
+                        <img src="https://raw.githubusercontent.com/andreiKaq/my-website/refs/heads/main/images/cats/image%20(2).png" alt="">
                     </div>
                     <div class="gallery__row" id="9">
                         <p class="img__names">нямням</p>
-                        <img src="images/cats/image 3.png" alt="">
+                        <img src="https://raw.githubusercontent.com/andreiKaq/my-website/refs/heads/main/images/cats/image%203.png" alt="">
                     </div>
                 </div>
             </div>
